# tsp_solver

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  notes.md  pyproject.toml  report_profiling.md  report_speedup.md
.github/actions/setup/: action.yml
.github/docker/: ci.Dockerfile
.github/scripts/: generate-report.sh
.github/workflows/: ci.yml  codeql.yml  dependabot_security_report.yml  dependency-review.yml  maintain_docker_image.yml  security-report.yml  security_report.yml  weekly_vulnerability_scan.yml
data/: star100.tsp
include/: city.hpp  cli_options.hpp  cli_parser.hpp  evaluator.hpp  insertion_solver.hpp  isolver.hpp  json_writer.hpp  map.hpp  nearest_neighbor_solver.hpp  parallel_runner.hpp  solve_options.hpp  solve_result.hpp  tour.hpp  two_opt_solver.hpp
scripts/: benchmark_speedup.sh  plot_tour.py  requirements.txt  run_benchmark.py  speed_results.md
src/: city.cpp  cli_parser.cpp  evaluator.cpp  insertion_solver.cpp  json_writer.cpp  main.cpp  map.cpp  nearest_neighbor_solver.cpp  parallel_runner.cpp  tour.cpp  two_opt_solver.cpp
tests/: test_cli_parser.cpp  test_evaluator.cpp  test_insertion_solver.cpp  test_json_writer.cpp  test_map.cpp  test_nearest_neighbor_solver.cpp  test_parallel_runner.cpp  test_two_opt_solver.cpp
