[project]
name = "traveling-salesman-problem"
version = "0.1.0"
description = ""

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.9,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
